sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:16: error: ';' expected but '=' found.
getValeur(j)_=v
             ^